--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide": "^0.518.0",
@@ -26,7 +27,10 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
+    "react-quill-new": "^3.4.6",
+    "slugmaster": "^1.2.5",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1"
   },
