--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-quill-new": "^3.4.6",
     "slugmaster": "^1.2.5",
     "sonner": "^2.0.5",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
